@@ -1,5 +1,5 @@
 Package: neubot
-Version: 0.4.7-1
+Version: 0.4.8-rc1-1
 Architecture: all
 Maintainer: Simone Basso <bassosimone@gmail.com>
 Installed-Size: @SIZE@
