@@ -152,7 +152,7 @@ class BitTorrentClient(ClientHTTP):
             "download_speed": download_speed,
 
             # OS and version info
-            "neubot_version": LibVersion.to_numeric("0.4.7"),
+            "neubot_version": LibVersion.to_numeric("0.4.8-rc1"),
             "platform": sys.platform,
         }
 
