@@ -65,7 +65,7 @@
           <div id="about">
             <h4 class='i18n i18n_about'>About</h4>
             <p class='i18n i18n_about_text'>
-              This is the web user interface of Neubot v0.4.7.
+              This is the web user interface of Neubot v0.4.8-rc1.
               Neubot is a lightweight <a
               href="http://www.neubot.org/copying">open-source</a> program
               that runs in background and periodically performs
