@@ -5,7 +5,7 @@
         <div class="entry-content">
 
         <p class='i18n i18n_privacy_not_ok' id='privacy_not_ok'>
-         Neubot is DISABLED: starting from version 0.4.7, Neubot servers
+         Neubot is DISABLED: starting from version 0.4.8-rc1, Neubot servers
          are deployed on the distributed
          <a href="http://www.measurementlab.net/">Measurement Lab</a>
          server platform.  To comply with Measurement Lab policy and be allowed
